--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div class="image1"><img src="img1.png" alt=""></div>
 
     <div class="txt" id="txt">
-        <div class="txt1">Honest, Flavourful Food</div>
-        <div class="txt2">A FEW WORDS ABOUT OUR RESTAURANT</div>
+        <div class="txt1"><h2>Honest, Flavourful Food</h2></div>
+        <div class="txt2"><h2>A FEW WORDS ABOUT OUR RESTAURANT</h2></div>
         <div class="line">__________</div>
     </div>
 
@@ -82,8 +82,8 @@
     </div>
 
     <div class="tareef2">
-        <h1>EAT GOOD FOOD</h1>
-        <h1>Have A Quick Look At Our Menus</h1>
+        <h2>EAT GOOD FOOD</h2>
+        <h2>Have A Quick Look At Our Menus</h2>
         <div>_______</div>
     </div>
 
