--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </a>
                 <a class="no-style" href="#txt">
                     <div class="options">ABOUT US</div>
-                </a>    
+                </a>
                 <a class="no-style" href="#menu">
                     <div class="options">MENU </div>
                 </a>
@@ -63,17 +63,25 @@
     <div class="image1"><img src="img1.png" alt=""></div>
 
     <div class="txt" id="txt">
-        <div class="txt1"><h2>Honest, Flavourful Food</h2></div>
-        <div class="txt2"><h2>A FEW WORDS ABOUT OUR RESTAURANT</h2></div>
+        <div class="txt1">
+            <h2>Honest, Flavourful Food</h2>
+        </div>
+        <div class="txt2">
+            <h2>A FEW WORDS ABOUT OUR RESTAURANT</h2>
+        </div>
         <div class="line">__________</div>
     </div>
 
     <div class="words">
         <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, inventore nam. Officiis natus libero quibusdam
-            earum vero nobis odio alias repudiandae eum? Pariatur quibusdam explicabo tenetur necessitatibus fuga eaque
-            voluptas, iste neque non nemo optio fugiat iusto possimus adipisci tempore nihil veritatis, qui aliquam
-            recusandae?
+            <h2>
+
+                Tucked away in a charming corner, this cozy restaurant offers a delightful blend of traditional and
+                contemporary cuisine. The warm, inviting ambiance complements the expertly crafted dishes, making it
+                perfect
+                for both casual dining and special occasions. Attentive service and a carefully curated menu ensure a
+                memorable experience.
+            </h2>
         </div>
     </div>
 
@@ -90,17 +98,17 @@
     <div class="ctr" id="menu">
         <div class="box box1">
             <h3>Chef Recommend </h3>
-            <div>Lamb Salad with Fregola​</div>
-            <div class="price"> -------$32.5</div>
+            <div>SUSHI</div>
+            <div class="price"> -------Rs 400</div>
             <br>
-            <div>Pappardelle with Sea Urchin & Cauliflower</div>
-            <div class="price"> -------$59.5</div>
+            <div>TACOS</div>
+            <div class="price"> -------Rs 250</div>
             <br>
-            <div>Scallop Sashimi with Meyer Lemon Confit</div>
-            <div class="price"> -------$40.5</div>
+            <div>Steak</div>
+            <div class="price"> -------Rs 500</div>
             <br>
-            <div>Braised Leeks with Mozzarella & Fried Egg</div>
-            <div class="price"> -------$37.5</div>
+            <div>SALAD</div>
+            <div class="price"> -------Rs 100</div>
         </div>
         <div class="box box2">
             <img src="image-02-free-img.png" alt="">
@@ -113,17 +121,17 @@
         </div>
         <div class="box box4">
             <h3>Main Courses</h3>
-            <div>Pork Rillette Hand Pies​</div>
-            <div class="price"> -------$19.5</div>
+            <div>PASTA​</div>
+            <div class="price"> -------Rs 150</div>
             <br>
-            <div>Island Duck with Mulberry Mustard</div>
-            <div class="price"> -------$25.5</div>
+            <div>MACRONI</div>
+            <div class="price"> -------Rs 250</div>
             <br>
-            <div>Malted Custard French Toast</div>
-            <div class="price"> -------$37.5</div>
+            <div>BURGER</div>
+            <div class="price"> -------Rs 200</div>
             <br>
-            <div>Pasta with Lamb Ragù</div>
-            <div class="price"> -------$29.5</div>
+            <div>PIZZA</div>
+            <div class="price"> -------Rs 300</div>
         </div>
     </div>
 
@@ -134,8 +142,7 @@
             <h2 style="font-size: 30px;">OUR CUSTOMERS FALL IN LOVE WITH US </h2>
         </div>
         <div class="review">
-            <div>“ By far the best occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-                est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque. ”
+            <div>“ This restaurant is a hidden gem! Exceptional food, impeccable service, and a warm, inviting atmosphere create an unforgettable dining experience. The chef's creative menu features fresh, locally sourced ingredients. Each dish is a masterpiece, making every visit a culinary delight. Highly recommend for anyone seeking a top-notch dining adventure. ”
             </div>
             <div style="margin-top: 2%;">-NARENDRA MODI</div>
 
@@ -161,18 +168,19 @@
     <br>
 
     <div class="ctr4">
+        <!-- <div><img src="footer-cta-bg.jpg" alt=""></div> -->
         <div style="background-color: red; height: 2px; width: 30vw; margin-top: 5%;"></div>
-        <br>
+
         <div>
             <h2 style="text-align: center;">CUISINE<br>CREATIONS</h2>
         </div>
-        <br>
+
         <br>
         <div class="contact">
             <div>YOU CAN REACH US AT</div>
             <div style="color: red;">+1 123 456 7890</div>
         </div>
-        <br>
+
         <div class="address">
             <div>Address:</div>
             <div>13 Fifth Avenue,New York</div>
